fix(docs): layout issues

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -19,55 +19,15 @@ $font-family-monospace: 'Source Code Pro', SFMono-Regular, Menlo, Monaco, Consol
 @import "bootstrap/scss/containers";
 @import "bootstrap/scss/grid";
 
+body {
+    background: var(--vp-c-bg, #fff) !important;
+    color: var(--vp-c-text, rgb(60, 60, 67)) !important;
+}
+
 :root {
-    // brand colors
-    --c-brand: #{$primary};
-    --c-brand-light: #{$blue-700};
+    --vp-c-accent: var(--bs-blue);
+    --vp-c-accent-hover: var(--bs-primary-text-emphasis);
 
-
-    // background colors
-    --c-bg: #{$body-bg};
-    --c-bg-light: #{lighten($body-bg, 5%)};
-    --c-bg-lighter: #{lighten($body-bg, 10%)};
-    --c-bg-arrow: #{lighten($body-bg, 20%)};
-
-    // text colors
-    --c-text: #{$body-color};
-    --c-text-light: #{darken($body-color, 5%)};
-    --c-text-lighter: #{darken($body-color, 10%)};
-    --c-text-lightest: #{darken($body-color, 15%)};
-    --c-text-quote: #{darken($body-color, 50%)};
-    --c-border-dark: #{darken($body-color, 50%)};
-
-    // border colors
-    --c-border: #{$gray-800};
-
-    // custom container colors
-    --c-tip: #{$info};
-    --c-tip-bg: #{shift-color($info, $alert-bg-scale)};
-    --c-tip-title: #{shift-color($info, $alert-bg-scale)};
-    --c-tip-text: #{shift-color($info, $alert-bg-scale)};
-    --c-tip-text-accent: #{shift-color($info, $alert-bg-scale)};
-    --c-warning: #{$warning};
-    --c-warning-bg: #{shift-color($warning, $alert-bg-scale)};
-    --c-warning-title: #{shift-color($warning, $alert-color-scale)};
-    --c-warning-text: #{shift-color($warning, $alert-color-scale)};
-    --c-warning-text-accent: #{shift-color($warning, $alert-color-scale)};
-    --c-danger: #{$danger};
-    --c-danger-bg: #{shift-color($danger, $alert-bg-scale)};
-    --c-danger-title: #{shift-color($danger, $alert-bg-scale)};
-    --c-danger-text: #{shift-color($danger, $alert-bg-scale)};
-    --c-danger-text-accent: #{shift-color($danger, $alert-color-scale)};
-
-    // code blocks vars
-    --code-bg-color: var(--c-bg-light);
-
-    // font vars
-    --font-family: #{$font-family-sans-serif};
-    --font-family-code: #{$font-family-monospace};
-
-    // search
-    --search-input-width: 120rem;
 }
 
 h1,
@@ -88,11 +48,7 @@ h2 {
 }
 
 a {
-    text-decoration: none;
-
-    &:hover {
-        text-decoration: underline;
-    }
+    text-decoration: none !important;
 }
 
 blockquote {
@@ -129,8 +85,6 @@ header.navbar {
 }
 
 .landing {
-    color: $body-bg;
-
     main {
         padding: 0;
         max-width: none;
@@ -139,4 +93,9 @@ header.navbar {
     header.hero {
         display: none;
     }
+}
+
+
+.vp-hero, .vp-site-name {
+    display: none;
 }
